--- a/private_Library/private_Application Support/private_Floorp/private_Profiles/private_b4i9ds8t.default-release/chrome/treeStyleTab.css
+++ b/private_Library/private_Application Support/private_Floorp/private_Profiles/private_b4i9ds8t.default-release/chrome/treeStyleTab.css
@@ -1,28 +1,30 @@
-:root.sidebar tab-item {
-    color: white;
-}
-
-:root.sidebar #background{
-  background: #112555;
+.sidebar #background {
+  background: #112255;
 }
 
 tab-item tab-closebox {
-  display: none;
+  background: #FFFFFF55;
+  border-radius: 5px;
 }
 
 tab-item {
-  --tab-margin-bottom: 10px;
-  --tab-margin-top: 0px;
-  border: solid 5px #DDDDFF22;
-  box-shadow: -50px 10px 100px #FFFFFFAA;
+  color: white;
+  font-size: 11px;
+  border: solid 6px #DDDDFF00;
+  /*box-shadow: -50px 150px 100px #AAFFFF33;*/
 }
 
+
 tab-item tab-label {
-  overflow: unset;
   white-space: nowrap;
 }
 
 tab-item tab-twisty {
-  margin-right: -0.5em;
-  opacity: 0 !important;
+  margin-right: 0.2em;
+  border-radius: 3px;
+  box-shadow: 1px 1px 100px 15px white;
+}
+
+tab-item:not(:hover) tab-closebox {
+  display: none;
 }
